--- a/server/public/index.html
+++ b/server/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta http-equiv="X-SUA-Compatible" content="ie=edge">
   <title>SGT: React</title>
   <link rel="shortcut icon" type="image/png" href="/images/favicon.png">
   <link
